added some files

--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/about.css">
-    <title>Document</title>
+    <title>Kingster University</title>
 </head>
 <body>
     <div class="nav-bar">
@@ -34,10 +34,10 @@
                     <img src="./assets/images/close.png" onclick="cls()" alt="">
                 </button>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="">Courses</a></li>
-                <li><a href="">Apply</a></li>
-                <li><a href="">About</a></li>
-                <li><a href="">Contact</a></li>
+                <li><a href="courses.html">Courses</a></li>
+                <li><a href="apply.html">Apply</a></li>
+                <li><a class="active" href="about.html">About</a></li>
+                <li><a href="contact.html">Contact</a></li>
                 <li id="join-btn"><a href="join.html">Join</a></li>
                 <li id="login-btn"><a href="login.html">Login</a></li>
             </div>
@@ -45,7 +45,7 @@
 
         <div class="main-about">
             <p>
-                Kingster university is a high profile, great and noble instittion with state of the art equipment and personnel for easiler learning process.
+                Kingster university is a high profile, great and noble institution with state of the art equipment and personnel for easiler learning process.
                 <br>
                 <br>
                 
