--- a/courses.html
+++ b/courses.html
@@ -5,13 +5,154 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/courses.css">
-    <title>Document</title>
+    <title>Kingster University</title>
 </head>
 <body>
-    <div class="container">
-        <div class="main-courses">
-   
+    <div class="container"><div class="nav-bar">
+        <div class="secondary-nav-bar">
+            <ul class="secondary-links">
+                
+            </ul>
+            <ul class="primary-links">
+
+            </ul>
+        </div>
+
+        <div class="primary-nav-bar">
+            <div class="logo">
+                <img src="./assets/images/66467-OC1Z3T-562_1676535539603.jpg" alt="">
+                <h3>
+                    Kingster <span>University</span>
+                </h3>
+            </div>
+            <button  id="opn-btn">
+                <img src="./assets/images/open.png" onclick="opn()"  alt="">
+            </button>
+
+            <div class="nav-links">
+                <button   id="x-btn">
+                    <img src="./assets/images/close.png" onclick="cls()" alt="">
+                </button>
+                <li><a href="index.html">Home</a></li>
+                <li><a class="active" href="courses.html">Courses</a></li>
+                <li><a href="apply.html">Apply</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="contact.html">Contact</a></li>
+                <li id="join-btn"><a href="join.html">Join</a></li>
+                <li id="login-btn"><a href="login.html">Login</a></li>
+            </div>
         </div>
     </div>
+
+        <div class="main-courses">
+            <table id="customers">
+                <tr>
+                    <th>Courses</th>
+                    <th>Courses Duration</th>
+                    <th>Degree</th>
+                </tr>
+
+                <tr>
+                    <td>Economics</td>
+                    <td>3 years</td>
+                    <td>Masters</td>
+                </tr>
+                <tr>
+                    <td>Geography</td>
+                    <td>4 years</td>
+                    <td>BSc</td>
+                </tr>
+                <tr>
+                    <td>Vetinary Medicine</td>
+                    <td>2 years</td>
+                    <td>BSc</td>
+                </tr>
+                <tr>
+                    <td>Mathematics</td>
+                    <td>3 years</td>
+                    <td>PHd</td>
+                </tr>
+                <tr>
+                    <td>Government</td>
+                    <td>2 years</td>
+                    <td>BSc</td>
+                </tr>
+                <tr>
+                    <td>Sociology</td>
+                    <td>4 years</td>
+                    <td>BSc</td>
+                </tr>
+                <tr>
+                    <td>Civil Engineering</td>
+                    <td>4 years</td>
+                    <td>Masters</td>
+                </tr>
+                <tr>
+                    <td>Statistics</td>
+                    <td>4 years</td>
+                    <td>BSc</td>
+                </tr>
+                <tr>
+                    <td>Bio Chemistry</td>
+                    <td>3 years</td>
+                    <td>BSc</td>
+                </tr>
+                <tr>
+                    <td>Physics</td>
+                    <td>3 years</td>
+                    <td>Masters</td>
+                </tr>
+                <tr>
+                    <td>Political Science</td>
+                    <td>4 years</td>
+                    <td>PHd</td>
+                </tr>
+                <tr>
+                    <td>Music</td>
+                    <td>2 years</td>
+                    <td>BSc</td>
+                </tr>
+                <tr>
+                    <td>Linguistic</td>
+                    <td>3 years</td>
+                    <td>BSc</td>
+                </tr>
+                <tr>
+                    <td>Electrical Engineering</td>
+                    <td>4 years</td>
+                    <td>BSc</td>
+                </tr>
+                <tr>
+                    <td>Mechanical Engineering</td>
+                    <td>4 years</td>
+                    <td>BSc</td>
+                </tr>
+                <tr>
+                    <td>Medical Science</td>
+                    <td>5 years</td>
+                    <td>Masters</td>
+                </tr>
+                <tr>
+                    <td>Computer Science</td>
+                    <td>3 years</td>
+                    <td>BSc</td>
+                </tr>
+                <tr>
+                    <td>Micro Biology</td>
+                    <td>4 years</td>
+                    <td>BSc</td>
+                </tr>
+            </table>
+        </div>
+        <script>
+            var navLinks = 
+            document.getElementsByClassName('nav-links');
+            var closeBtn =
+            document.getElementById('x-btn');
+            var openBtn =
+            document.getElementById('opn-btn');
+            openBtn.addEventListener('click',()=>{navLinks[0].style.right ='0';})
+            closeBtn.addEventListener('click',()=>{navLinks[0].style.right ='-200px';})
+        </script>
 </body>
 </html>
