--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
                     <button   id="x-btn">
                         <img src="./assets/images/close.png" onclick="cls()" alt="">
                     </button>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="">Courses</a></li>
+                    <li><a class="active" href="index.html">Home</a></li>
+                    <li><a href="courses.html">Courses</a></li>
                     <li><a href="apply.html">Apply</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="contact.html">Contact</a></li>
