--- a/tour.html
+++ b/tour.html
@@ -35,10 +35,10 @@
                         <img src="./assets/images/close.png" onclick="cls()" alt="">
                     </button>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="">Courses</a></li>
-                    <li><a href="">Apply</a></li>
-                    <li><a href="">About</a></li>
-                    <li><a href="">Contact</a></li>
+                    <li><a href="courses.html">Courses</a></li>
+                    <li><a href="apply.html">Apply</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                     <li id="join-btn"><a href="join.html">Join</a></li>
                     <li id="login-btn"><a href="login.html">Login</a></li>
                 </div>
