added file root location

--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/about.css">
-    <title>Kingster University</title>
+    <title>Kingster University./</title>
 </head>
 <body>
     <div class="nav-bar">
@@ -33,13 +33,13 @@
                 <button   id="x-btn">
                     <img src="./assets/images/close.png" onclick="cls()" alt="">
                 </button>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="courses.html">Courses</a></li>
-                <li><a href="apply.html">Apply</a></li>
-                <li><a class="active" href="about.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
-                <li id="join-btn"><a href="join.html">Join</a></li>
-                <li id="login-btn"><a href="login.html">Login</a></li>
+                <li><a href="./index.html">Home</a></li>
+                <li><a href="./courses.html">Courses</a></li>
+                <li><a href="./apply.html">Apply</a></li>
+                <li><a class="active" href="./about.html">About</a></li>
+                <li><a href="./contact.html">Contact</a></li>
+                <li id="join-btn"><a href="./join.html">Join</a></li>
+                <li id="login-btn"><a href="./login.html">Login</a></li>
             </div>
         </div>
 
