--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
                     <button   id="x-btn">
                         <img src="./assets/images/close.png" onclick="cls()" alt="">
                     </button>
-                    <li><a class="active" href="index.html">Home</a></li>
-                    <li><a href="courses.html">Courses</a></li>
-                    <li><a href="apply.html">Apply</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="contact.html">Contact</a></li>
-                    <li id="join-btn"><a href="join.html">Join</a></li>
-                    <li id="login-btn"><a href="login.html">Login</a></li>
+                    <li><a class="active" href="./index.html">Home</a></li>
+                    <li><a href="./courses.html">Courses</a></li>
+                    <li><a href="./apply.html">Apply</a></li>
+                    <li><a href="./about.html">About</a></li>
+                    <li><a href="./contact.html">Contact</a></li>
+                    <li id="join-btn"><a href="./join.html">Join</a></li>
+                    <li id="login-btn"><a href="./login.html">Login</a></li>
                 </div>
             </div>
         </div>
@@ -49,7 +49,7 @@
             <div class="uni-intro">
                 <h3>the best university in the state</h3>
                 <h1>Kingster University</h1>
-                <form action="tour.html">
+                <form action="./tour.html">
                     <button>Take A Tour</button>
                 </form>
             </div>
@@ -98,7 +98,7 @@
                     We don't just give students an eucation and experience that set them up for success in a career.
                     We help them succeed in their career- to discover a field they're passionate about and dare to lead it.
                     </p>
-                    <form action="appply.html">
+                    <form action="./appply.html">
                         <button>Apply Now</button>
                     </form>
                 </div>
