--- a/join.html
+++ b/join.html
@@ -31,7 +31,7 @@
 
           <input type="submit" value="SIGN UP " id="signup-btn" />
         </form>
-        <p>Already have an account? <a href="login.html">Login</a></p>
+        <p>Already have an account? <a href="./login.html">Login</a></p>
       </div>
     </div>
   </body>
