--- a/login.html
+++ b/login.html
@@ -24,7 +24,7 @@
 
                 <input type="submit" value="LOGIN " id="login-btn">
             </form>
-            <p>Want an account ? <a href="join.html">Join</a></p>
+            <p>Want an account ? <a href="./join.html">Join</a></p>
         </div>
     </div>
 </body>
