--- a/tour.html
+++ b/tour.html
@@ -24,7 +24,7 @@
                     <img src="./assets/images/66467-OC1Z3T-562_1676535539603.jpg" alt="">
                     <h3>
                         Kingster <span>University</span>
-                    </h3>
+                    </h3>./
                 </div>
                 <button  id="opn-btn">
                     <img src="./assets/images/open.png" onclick="opn()"  alt="">
@@ -34,13 +34,13 @@
                     <button   id="x-btn">
                         <img src="./assets/images/close.png" onclick="cls()" alt="">
                     </button>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="courses.html">Courses</a></li>
-                    <li><a href="apply.html">Apply</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="contact.html">Contact</a></li>
-                    <li id="join-btn"><a href="join.html">Join</a></li>
-                    <li id="login-btn"><a href="login.html">Login</a></li>
+                    <li><a href="./index.html">Home</a></li>
+                    <li><a href="./courses.html">Courses</a></li>
+                    <li><a href="./apply.html">Apply</a></li>
+                    <li><a href="./about.html">About</a></li>
+                    <li><a href="./contact.html">Contact</a></li>
+                    <li id="join-btn"><a href="./join.html">Join</a></li>
+                    <li id="login-btn"><a href="./login.html">Login</a></li>
                 </div>
             </div>
         </div>
