--- a/contact.html
+++ b/contact.html
@@ -34,13 +34,13 @@
                     <button   id="x-btn">
                         <img src="./assets/images/close.png" onclick="cls()" alt="">
                     </button>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="courses.html">Courses</a></li>
-                    <li><a href="apply.html">Apply</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a class="active" href="contact.html">Contact</a></li>
-                    <li id="join-btn"><a href="join.html">Join</a></li>
-                    <li id="login-btn"><a href="login.html">Login</a></li>
+                    <li><a href="./index.html">Home</a></li>
+                    <li><a href="./courses.html">Courses</a></li>
+                    <li><a href="./apply.html">Apply</a></li>
+                    <li><a href="./about.html">About</a></li>
+                    <li><a class="active" href="./contact.html">Contact</a></li>
+                    <li id="join-btn"><a href="./join.html">Join</a></li>
+                    <li id="login-btn"><a href="./login.html">Login</a></li>
                 </div>
             </div>
 
@@ -74,7 +74,7 @@
             </div> 
 
             <div class="div-four">
-                <form action="index.html" method="post">
+                <form action="./index.html" method="post">
                     <input type="text" name="" id="" placeholder="First Name">
                     <input type="text" name="" id="" placeholder="Last Name"><br><br>
                     <input type="email" name="" id="" placeholder="Email">
