--- a/courses.html
+++ b/courses.html
@@ -33,13 +33,13 @@
                 <button   id="x-btn">
                     <img src="./assets/images/close.png" onclick="cls()" alt="">
                 </button>
-                <li><a href="index.html">Home</a></li>
-                <li><a class="active" href="courses.html">Courses</a></li>
-                <li><a href="apply.html">Apply</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
-                <li id="join-btn"><a href="join.html">Join</a></li>
-                <li id="login-btn"><a href="login.html">Login</a></li>
+                <li><a href="./index.html">Home</a></li>
+                <li><a class="active" href="./courses.html">Courses</a></li>
+                <li><a href="./apply.html">Apply</a></li>
+                <li><a href="./about.html">About</a></li>
+                <li><a href="./contact.html">Contact</a></li>
+                <li id="join-btn"><a href="./join.html">Join</a></li>
+                <li id="login-btn"><a href="./login.html">Login</a></li>
             </div>
         </div>
     </div>
