edited some errors

--- a/apply.html
+++ b/apply.html
@@ -84,7 +84,7 @@
                         
                     </select>
 
-                    <input type="button" value="Apply">
+                    <input id="apply-btn" type="button" value="Apply">
                 </form>
             </div>
         </div>
