--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                         From 2020 applications are now open
                     </h3>
                     <p>
-                    We don't just give students an eucation and experience that set them up for success in a career.
+                    We don't just give students an education and experience that set them up for success in a career.
                     We help them succeed in their career- to discover a field they're passionate about and dare to lead it.
                     </p>
                     <form action="./appply.html">
