--- a/contact.html
+++ b/contact.html
@@ -80,7 +80,7 @@
                     <input type="email" name="" id="" placeholder="Email">
                     <input type="tel" name="" id="" placeholder="Phone"><br><br>
 
-                    <input type="button" value="Contact Us">
+                    <input id="contact-btn" type="button" value="Contact Us">
                 </form>
             </div>
         </div>
